// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: README.md 1`] = `
"# Acme Health CSS package

Generated by AuthorKit from the “Spring launch” project.

- **Class prefix:** \`acme\`
- **Responsive approach:** desktop-first
- **Files:** 8 stylesheets plus \`acme-health.css\`

> Do not edit these files by hand. Change the project in AuthorKit and regenerate,
> so the CSS, the style guide and this README stay in sync.

## Quick start

\`\`\`html
<link rel="stylesheet" href="acme-health.css">
\`\`\`

\`acme-health.css\` imports every stylesheet in the right order. To load the files yourself
(for example in an AEM clientlib), keep this order:

1. \`css/tokens.css\`: Design tokens
2. \`css/global.css\`: Global (type, links, base)
3. \`css/components/cta.css\`: CTA buttons
4. \`css/components/accordion.css\`: Accordion
5. \`css/components/header.css\`: Header
6. \`css/components/footer.css\`: Footer
7. \`css/components/isi.css\`: ISI and safety bar
8. \`css/components/modals.css\`: Modals

## Folder structure

\`\`\`
acme-health/
├── acme-health.css  ← entry: imports every stylesheet
├── README.md  ← this file
└── css/
    ├── tokens.css  ← tokens
    ├── global.css  ← global
    └── components/
        ├── header.css  ← header
        ├── footer.css  ← footer
        ├── isi.css  ← isi
        ├── modals.css  ← modals
        ├── cta.css  ← cta
        └── accordion.css  ← accordion
\`\`\`

## Breakpoints

| Name | Screen width | Media query |
| --- | --- | --- |
| desktop | ≥ 1024px | base styles (no media query) |
| tablet | 768px – 1023px | \`@media (max-width: 1023px)\` |
| mobile | ≤ 767px | \`@media (max-width: 767px)\` |

Desktop-first: base styles target the largest screen. Each \`max-width\` query adds changes for smaller screens.
Look for \`/* @authorkit-responsive … */\` comments in each file to find the overrides for a breakpoint.

## Naming

Every class uses BEM with the \`acme-\` prefix, so these styles cannot collide with other CSS on the page:

- Block: \`.acme-btn\`
- Element: \`.acme-btn__icon\`
- Modifier: \`.acme-btn--primary\`
- Custom property (token): \`--acme-color-primary\`

\`global.css\` also styles plain HTML elements (\`h1\`–\`h6\`, \`p\`, \`a\`, \`sup\`, \`sub\`, lists and images),
so rich text from authors is styled without extra classes.

## Customising

All design values are CSS custom properties. Override a token after loading the package:

\`\`\`css
:root {
  --acme-color-primary: #0b4f8a;
}
\`\`\`

## Components

| File | Component | Classes |
| --- | --- | --- |
| \`css/global.css\` | Global (type, links, base) | \`.acme-h1\` \`.acme-h2\` \`.acme-h3\` \`.acme-h4\` \`.acme-h5\` \`.acme-h6\` |
| \`css/components/header.css\` | Header | \`.acme-header\` \`.acme-header--sticky\` \`.acme-header__inner\` \`.acme-header__logo\` \`.acme-header__toggle\` \`.acme-header__nav\` \`.acme-header__list\` \`.acme-header__link\` |
| \`css/components/footer.css\` | Footer | \`.acme-footer\` \`.acme-footer__inner\` \`.acme-footer__logo\` \`.acme-footer__links\` \`.acme-footer__link\` \`.acme-footer__legal\` \`.acme-footer__copyright\` |
| \`css/components/isi.css\` | ISI and safety bar | \`.acme-isi\` \`.acme-isi__content\` \`.acme-isi__title\` \`.acme-isi__section\` \`.acme-isi-bar\` \`.acme-isi-bar--expanded\` \`.acme-isi-bar__header\` \`.acme-isi-bar__title\` \`.acme-isi-bar__toggle\` \`.acme-isi-bar__icon\` \`.acme-isi-bar__content\` \`.acme-isi-bar-spacer\` |
| \`css/components/modals.css\` | Modals | \`.acme-modal\` \`.acme-modal--interstitial\` \`.acme-modal__header\` \`.acme-modal__title\` \`.acme-modal__close\` \`.acme-modal__body\` \`.acme-modal__footer\` \`.acme-modal-open\` |
| \`css/components/cta.css\` | CTA buttons | \`.acme-btn\` \`.acme-btn--primary\` \`.acme-btn--secondary\` \`.acme-btn--tertiary\` \`.acme-btn--block\` \`.acme-btn__icon\` |
| \`css/components/accordion.css\` | Accordion | \`.acme-accordion\` \`.acme-accordion__item\` \`.acme-accordion__heading\` \`.acme-accordion__trigger\` \`.acme-accordion__icon\` \`.acme-accordion__panel\` |
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: acme-health.css 1`] = `
"/*!
 * Acme Health · acme-health.css
 * Package entry. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Link this one file, or load the files below yourself in the same order.
 */

@import url("css/tokens.css");
@import url("css/global.css");
@import url("css/components/cta.css");
@import url("css/components/accordion.css");
@import url("css/components/header.css");
@import url("css/components/footer.css");
@import url("css/components/isi.css");
@import url("css/components/modals.css");
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/accordion.css 1`] = `
"/*!
 * Acme Health · css/components/accordion.css
 * Accordion. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-accordion-border-color
 *   --acme-accordion-padding-y
 *   --acme-accordion-title-size
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-heading
 *   --acme-color-link
 *   --acme-duration-fast
 *   --acme-font-size-lg
 *   --acme-font-weight-bold
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-icon
 *   --acme-space-4
 */

.acme-accordion {
  --acme-accordion-border-color: var(--acme-color-border);
  --acme-accordion-padding-y: var(--acme-space-4);
  --acme-accordion-title-size: var(--acme-font-size-lg);

  border-top: var(--acme-border-width) solid var(--acme-accordion-border-color);
}

.acme-accordion__item {
  border-bottom: var(--acme-border-width) solid var(--acme-accordion-border-color);
}

.acme-accordion__heading {
  margin: 0;
  font-size: inherit;
}

.acme-accordion__trigger {
  display: flex;
  gap: var(--acme-space-4);
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: var(--acme-accordion-padding-y) 0;
  border: 0;
  background-color: transparent;
  color: var(--acme-color-heading);
  font: inherit;
  font-size: var(--acme-accordion-title-size);
  font-weight: var(--acme-font-weight-bold);
  text-align: left;
  cursor: pointer;
}

.acme-accordion__trigger:hover {
  color: var(--acme-color-link);
}

.acme-accordion__trigger:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-accordion__icon {
  flex: none;
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
  transition: transform var(--acme-duration-fast) ease;
}

.acme-accordion__trigger[aria-expanded="true"] .acme-accordion__icon {
  transform: rotate(180deg);
}

.acme-accordion__panel {
  padding: 0 0 var(--acme-accordion-padding-y);
}

.acme-accordion__panel[hidden] {
  display: none;
}

@media (prefers-reduced-motion: reduce) {
  .acme-accordion__icon {
    transition: none;
  }
}

/* @authorkit-responsive accordion · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive accordion · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/cta.css 1`] = `
"/*!
 * Acme Health · css/components/cta.css
 * CTA buttons. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-btn-bg
 *   --acme-btn-bg-hover
 *   --acme-btn-border-color
 *   --acme-btn-border-color-hover
 *   --acme-btn-color
 *   --acme-btn-color-hover
 *   --acme-btn-font-size
 *   --acme-btn-padding-x
 *   --acme-btn-padding-y
 *   --acme-btn-radius
 *   --acme-color-disabled-background
 *   --acme-color-disabled-text
 *   --acme-color-focus
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-on-primary
 *   --acme-color-primary
 *   --acme-color-primary-hover
 *   --acme-duration-fast
 *   --acme-font-size-base
 *   --acme-font-weight-bold
 *   --acme-line-height-tight
 *   --acme-radius-pill
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-icon
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-5
 */

.acme-btn {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary);
  --acme-btn-padding-y: var(--acme-space-3);
  --acme-btn-padding-x: var(--acme-space-5);
  --acme-btn-radius: var(--acme-radius-pill);
  --acme-btn-font-size: var(--acme-font-size-base);

  display: inline-flex;
  gap: var(--acme-space-2);
  align-items: center;
  justify-content: center;
  padding: var(--acme-btn-padding-y) var(--acme-btn-padding-x);
  border: var(--acme-border-width) solid var(--acme-btn-border-color);
  border-radius: var(--acme-btn-radius);
  background-color: var(--acme-btn-bg);
  color: var(--acme-btn-color);
  font-family: inherit;
  font-size: var(--acme-btn-font-size);
  font-weight: var(--acme-font-weight-bold);
  line-height: var(--acme-line-height-tight);
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  transition:
    background-color var(--acme-duration-fast) ease,
    border-color var(--acme-duration-fast) ease,
    color var(--acme-duration-fast) ease;
}

.acme-btn:hover {
  border-color: var(--acme-btn-border-color-hover);
  background-color: var(--acme-btn-bg-hover);
  color: var(--acme-btn-color-hover);
}

.acme-btn:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

/* Variants */
.acme-btn--primary {
  --acme-btn-bg: var(--acme-color-primary);
  --acme-btn-color: var(--acme-color-on-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary-hover);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary-hover);
}

.acme-btn--secondary {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary);
}

.acme-btn--tertiary {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-link);
  --acme-btn-border-color: transparent;
  --acme-btn-bg-hover: transparent;
  --acme-btn-color-hover: var(--acme-color-link-hover);
  --acme-btn-border-color-hover: transparent;
  --acme-btn-padding-x: 0;

  text-decoration: underline;
}

.acme-btn--block {
  display: flex;
  width: 100%;
}

.acme-btn__icon {
  flex: none;
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
}

/* Disabled: after the variants so it wins over all of them */
.acme-btn:disabled,
.acme-btn[aria-disabled="true"] {
  --acme-btn-bg: var(--acme-color-disabled-background);
  --acme-btn-color: var(--acme-color-disabled-text);
  --acme-btn-border-color: var(--acme-color-disabled-background);
  --acme-btn-bg-hover: var(--acme-color-disabled-background);
  --acme-btn-color-hover: var(--acme-color-disabled-text);
  --acme-btn-border-color-hover: var(--acme-color-disabled-background);

  cursor: not-allowed;
}

@media (prefers-reduced-motion: reduce) {
  .acme-btn {
    transition: none;
  }
}

/* @authorkit-responsive cta · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive cta · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/footer.css 1`] = `
"/*!
 * Acme Health · css/components/footer.css
 * Footer. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-focus-inverse
 *   --acme-color-footer-background
 *   --acme-color-footer-link
 *   --acme-color-footer-text
 *   --acme-font-size-sm
 *   --acme-footer-align
 *   --acme-footer-bg
 *   --acme-footer-color
 *   --acme-footer-direction
 *   --acme-footer-link-color
 *   --acme-footer-padding-y
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-logo-height
 *   --acme-space-3
 *   --acme-space-5
 *   --acme-space-7
 */

.acme-footer {
  --acme-footer-direction: row;
  --acme-footer-align: center;
  --acme-footer-bg: var(--acme-color-footer-background);
  --acme-footer-color: var(--acme-color-footer-text);
  --acme-footer-link-color: var(--acme-color-footer-link);
  --acme-footer-padding-y: var(--acme-space-7);

  background-color: var(--acme-footer-bg);
  color: var(--acme-footer-color);
  font-size: var(--acme-font-size-sm);
}

.acme-footer__inner {
  display: flex;
  flex-direction: var(--acme-footer-direction);
  gap: var(--acme-space-5);
  align-items: var(--acme-footer-align);
  justify-content: space-between;
  max-width: var(--acme-size-container-max);
  margin: 0 auto;
  padding: var(--acme-footer-padding-y) var(--acme-size-gutter);
}

.acme-footer__logo {
  display: inline-flex;
  color: inherit;
}

.acme-footer__logo img {
  display: block;
  width: auto;
  height: var(--acme-size-logo-height);
}

.acme-footer__links {
  display: flex;
  flex-wrap: wrap;
  gap: var(--acme-space-3) var(--acme-space-5);
  margin: 0;
  padding: 0;
  list-style: none;
}

.acme-footer__links li + li {
  margin-top: 0;
}

.acme-footer__link {
  color: var(--acme-footer-link-color);
  text-decoration: underline;
}

.acme-footer__link:hover {
  color: var(--acme-footer-link-color);
  text-decoration: none;
}

.acme-footer__logo:focus-visible,
.acme-footer__link:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus-inverse);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-footer__legal,
.acme-footer__copyright {
  margin: 0;
}

/* @authorkit-responsive footer · tablet (768px – 1023px) */
@media (max-width: 1023px) {
  .acme-footer {
    --acme-footer-direction: column;
    --acme-footer-align: flex-start;
  }
}

/* @authorkit-responsive footer · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/header.css 1`] = `
"/*!
 * Acme Health · css/components/header.css
 * Header. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-header-background
 *   --acme-color-link
 *   --acme-color-text
 *   --acme-font-weight-bold
 *   --acme-header-bg
 *   --acme-header-color
 *   --acme-header-list-direction
 *   --acme-header-nav-display
 *   --acme-header-nav-padding
 *   --acme-header-nav-position
 *   --acme-header-nav-shadow
 *   --acme-header-shadow
 *   --acme-header-toggle-display
 *   --acme-radius-sm
 *   --acme-shadow-md
 *   --acme-shadow-sm
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-header-height
 *   --acme-size-logo-height
 *   --acme-size-touch-target
 *   --acme-space-2
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-z-header
 */

.acme-header {
  --acme-header-toggle-display: none;
  --acme-header-nav-display: block;
  --acme-header-nav-position: static;
  --acme-header-nav-padding: 0;
  --acme-header-nav-shadow: none;
  --acme-header-list-direction: row;
  --acme-header-bg: var(--acme-color-header-background);
  --acme-header-color: var(--acme-color-text);
  --acme-header-shadow: var(--acme-shadow-sm);

  position: relative;
  z-index: var(--acme-z-header);
  background-color: var(--acme-header-bg);
  color: var(--acme-header-color);
  box-shadow: var(--acme-header-shadow);
}

.acme-header--sticky {
  position: sticky;
  top: 0;
}

.acme-header__inner {
  display: flex;
  gap: var(--acme-space-4);
  align-items: center;
  justify-content: space-between;
  max-width: var(--acme-size-container-max);
  min-height: var(--acme-size-header-height);
  margin: 0 auto;
  padding: 0 var(--acme-size-gutter);
}

.acme-header__logo {
  display: inline-flex;
  align-items: center;
  color: inherit;
  text-decoration: none;
}

.acme-header__logo img {
  display: block;
  width: auto;
  height: var(--acme-size-logo-height);
}

/* Menu button: shown on small screens, hidden where the nav fits inline */
.acme-header__toggle {
  display: var(--acme-header-toggle-display);
  align-items: center;
  justify-content: center;
  min-width: var(--acme-size-touch-target);
  min-height: var(--acme-size-touch-target);
  padding: var(--acme-space-2);
  border: var(--acme-border-width) solid var(--acme-color-border);
  border-radius: var(--acme-radius-sm);
  background-color: transparent;
  color: inherit;
  font: inherit;
  cursor: pointer;
}

.acme-header__nav {
  display: var(--acme-header-nav-display);
  position: var(--acme-header-nav-position);
  top: 100%;
  right: 0;
  left: 0;
  padding: var(--acme-header-nav-padding);
  background-color: var(--acme-header-bg);
  box-shadow: var(--acme-header-nav-shadow);
}

/* Open state: the toggle sits directly before the nav and carries aria-expanded */
.acme-header__toggle[aria-expanded="true"] + .acme-header__nav {
  display: block;
}

.acme-header__list {
  display: flex;
  flex-direction: var(--acme-header-list-direction);
  gap: var(--acme-space-2) var(--acme-space-5);
  margin: 0;
  padding: 0;
  list-style: none;
}

.acme-header__list li + li {
  margin-top: 0;
}

.acme-header__link {
  display: block;
  padding: var(--acme-space-2) 0;
  color: var(--acme-header-color);
  font-weight: var(--acme-font-weight-bold);
  text-decoration: none;
}

.acme-header__link:hover,
.acme-header__link[aria-current="page"] {
  color: var(--acme-color-link);
  text-decoration: underline;
}

.acme-header__toggle:focus-visible,
.acme-header__link:focus-visible,
.acme-header__logo:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

/* @authorkit-responsive header · tablet (768px – 1023px) */
@media (max-width: 1023px) {
  .acme-header {
    --acme-header-toggle-display: inline-flex;
    --acme-header-nav-display: none;
    --acme-header-nav-position: absolute;
    --acme-header-nav-padding: var(--acme-space-4) var(--acme-size-gutter);
    --acme-header-nav-shadow: var(--acme-shadow-md);
    --acme-header-list-direction: column;
  }
}

/* @authorkit-responsive header · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/isi.css 1`] = `
"/*!
 * Acme Health · css/components/isi.css
 * ISI and safety bar. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-isi-background
 *   --acme-color-isi-heading
 *   --acme-color-isi-text
 *   --acme-duration-base
 *   --acme-duration-fast
 *   --acme-font-size-base
 *   --acme-font-size-lg
 *   --acme-font-size-sm
 *   --acme-font-weight-bold
 *   --acme-isi-bar-bg
 *   --acme-isi-bar-color
 *   --acme-isi-bar-max-height
 *   --acme-isi-bg
 *   --acme-isi-color
 *   --acme-isi-padding-y
 *   --acme-line-height-body
 *   --acme-radius-pill
 *   --acme-shadow-lg
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-icon
 *   --acme-size-isi-bar-collapsed
 *   --acme-size-isi-bar-expanded
 *   --acme-size-touch-target
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-space-6
 *   --acme-z-isi-bar
 */

/* In-page Important Safety Information */
.acme-isi {
  --acme-isi-bg: var(--acme-color-isi-background);
  --acme-isi-color: var(--acme-color-isi-text);
  --acme-isi-padding-y: var(--acme-space-6);

  padding: var(--acme-isi-padding-y) var(--acme-size-gutter);
  background-color: var(--acme-isi-bg);
  color: var(--acme-isi-color);
  font-size: var(--acme-font-size-sm);
  line-height: var(--acme-line-height-body);
}

.acme-isi__content {
  max-width: var(--acme-size-container-max);
  margin: 0 auto;
}

.acme-isi__title {
  margin: 0 0 var(--acme-space-3);
  color: var(--acme-color-isi-heading);
  font-size: var(--acme-font-size-lg);
  font-weight: var(--acme-font-weight-bold);
}

.acme-isi__section + .acme-isi__section {
  margin-top: var(--acme-space-5);
}

/* Sticky safety bar: collapsed by default, expanded with the modifier */
.acme-isi-bar {
  --acme-isi-bar-max-height: var(--acme-size-isi-bar-collapsed);
  --acme-isi-bar-bg: var(--acme-color-isi-background);
  --acme-isi-bar-color: var(--acme-color-isi-text);

  display: flex;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: var(--acme-z-isi-bar);
  flex-direction: column;
  max-height: var(--acme-isi-bar-max-height);
  background-color: var(--acme-isi-bar-bg);
  color: var(--acme-isi-bar-color);
  box-shadow: var(--acme-shadow-lg);
  transition: max-height var(--acme-duration-base) ease;
}

.acme-isi-bar--expanded {
  --acme-isi-bar-max-height: var(--acme-size-isi-bar-expanded);
}

.acme-isi-bar__header {
  display: flex;
  flex: none;
  gap: var(--acme-space-3);
  align-items: center;
  justify-content: space-between;
  padding: var(--acme-space-3) var(--acme-size-gutter);
  border-bottom: var(--acme-border-width) solid var(--acme-color-border);
}

.acme-isi-bar__title {
  margin: 0;
  color: var(--acme-color-isi-heading);
  font-size: var(--acme-font-size-base);
  font-weight: var(--acme-font-weight-bold);
}

.acme-isi-bar__toggle {
  display: inline-flex;
  flex: none;
  gap: var(--acme-space-2);
  align-items: center;
  min-height: var(--acme-size-touch-target);
  padding: var(--acme-space-2) var(--acme-space-4);
  border: var(--acme-border-width) solid currentcolor;
  border-radius: var(--acme-radius-pill);
  background-color: transparent;
  color: inherit;
  font: inherit;
  font-size: var(--acme-font-size-sm);
  font-weight: var(--acme-font-weight-bold);
  cursor: pointer;
}

.acme-isi-bar__toggle:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-isi-bar__icon {
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
  transition: transform var(--acme-duration-fast) ease;
}

.acme-isi-bar--expanded .acme-isi-bar__icon {
  transform: rotate(180deg);
}

.acme-isi-bar__content {
  overflow-y: auto;
  padding: var(--acme-space-3) var(--acme-size-gutter) var(--acme-space-4);
  font-size: var(--acme-font-size-sm);
}

/* Keeps page content clear of the fixed bar; place at the end of the page */
.acme-isi-bar-spacer {
  height: var(--acme-size-isi-bar-collapsed);
}

@media (prefers-reduced-motion: reduce) {
  .acme-isi-bar,
  .acme-isi-bar__icon {
    transition: none;
  }
}

/* @authorkit-responsive isi · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive isi · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/components/modals.css 1`] = `
"/*!
 * Acme Health · css/components/modals.css
 * Modals. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-background
 *   --acme-color-focus
 *   --acme-color-overlay
 *   --acme-color-surface
 *   --acme-color-text
 *   --acme-font-size-h4
 *   --acme-font-size-lg
 *   --acme-modal-bg
 *   --acme-modal-padding
 *   --acme-modal-radius
 *   --acme-modal-width
 *   --acme-radius-lg
 *   --acme-radius-pill
 *   --acme-shadow-lg
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-modal-max
 *   --acme-size-modal-narrow
 *   --acme-size-touch-target
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 */

/* Built on the native <dialog> element: showModal() provides the focus trap and Escape */
.acme-modal {
  --acme-modal-width: var(--acme-size-modal-max);
  --acme-modal-padding: var(--acme-space-5);
  --acme-modal-radius: var(--acme-radius-lg);
  --acme-modal-bg: var(--acme-color-background);

  width: min(100% - 2 * var(--acme-size-gutter), var(--acme-modal-width));
  max-height: calc(100% - 2 * var(--acme-size-gutter));
  margin: auto;
  padding: 0;
  border: 0;
  border-radius: var(--acme-modal-radius);
  background-color: var(--acme-modal-bg);
  color: var(--acme-color-text);
  box-shadow: var(--acme-shadow-lg);
}

.acme-modal[open] {
  display: flex;
  flex-direction: column;
}

.acme-modal::backdrop {
  background-color: var(--acme-color-overlay);
}

.acme-modal__header {
  display: flex;
  flex: none;
  gap: var(--acme-space-4);
  align-items: flex-start;
  justify-content: space-between;
  padding: var(--acme-modal-padding) var(--acme-modal-padding) 0;
}

.acme-modal__title {
  margin: 0;
  font-size: var(--acme-font-size-h4);
}

.acme-modal__close {
  display: inline-flex;
  flex: none;
  align-items: center;
  justify-content: center;
  width: var(--acme-size-touch-target);
  height: var(--acme-size-touch-target);
  padding: 0;
  border: 0;
  border-radius: var(--acme-radius-pill);
  background-color: transparent;
  color: inherit;
  font: inherit;
  font-size: var(--acme-font-size-lg);
  cursor: pointer;
}

.acme-modal__close:hover {
  background-color: var(--acme-color-surface);
}

.acme-modal__close:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-modal__body {
  overflow-y: auto;
  padding: var(--acme-modal-padding);
}

.acme-modal__footer {
  display: flex;
  flex: none;
  flex-wrap: wrap;
  gap: var(--acme-space-3);
  justify-content: flex-end;
  padding: 0 var(--acme-modal-padding) var(--acme-modal-padding);
}

/* Leaving-site / interstitial warning */
.acme-modal--interstitial {
  --acme-modal-width: var(--acme-size-modal-narrow);
}

/* Set on <body> while a modal is open to stop the page scrolling behind it */
.acme-modal-open {
  overflow: hidden;
}

/* @authorkit-responsive modals · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive modals · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/global.css 1`] = `
"/*!
 * Acme Health · css/global.css
 * Global styles. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-background
 *   --acme-color-focus
 *   --acme-color-heading
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-text
 *   --acme-font-family-base
 *   --acme-font-family-heading
 *   --acme-font-size-base
 *   --acme-font-size-h1
 *   --acme-font-size-h2
 *   --acme-font-size-h3
 *   --acme-font-size-h4
 *   --acme-font-size-h5
 *   --acme-font-size-h6
 *   --acme-font-size-sup
 *   --acme-font-weight-bold
 *   --acme-font-weight-regular
 *   --acme-letter-spacing-heading
 *   --acme-line-height-body
 *   --acme-line-height-heading
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-sub-offset
 *   --acme-size-sup-offset
 *   --acme-space-2
 *   --acme-space-4
 *   --acme-space-5
 */

/* Base reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: var(--acme-color-background);
  color: var(--acme-color-text);
  font-family: var(--acme-font-family-base);
  font-size: var(--acme-font-size-base);
  font-weight: var(--acme-font-weight-regular);
  line-height: var(--acme-line-height-body);
}

img {
  max-width: 100%;
  height: auto;
}

/* Headings: elements, plus classes for a visual level that differs from the semantic one */
h1,
h2,
h3,
h4,
h5,
h6,
.acme-h1,
.acme-h2,
.acme-h3,
.acme-h4,
.acme-h5,
.acme-h6 {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
  color: var(--acme-color-heading);
  font-family: var(--acme-font-family-heading);
  font-weight: var(--acme-font-weight-bold);
  line-height: var(--acme-line-height-heading);
  letter-spacing: var(--acme-letter-spacing-heading);
}

h1,
.acme-h1 {
  font-size: var(--acme-font-size-h1);
}

h2,
.acme-h2 {
  font-size: var(--acme-font-size-h2);
}

h3,
.acme-h3 {
  font-size: var(--acme-font-size-h3);
}

h4,
.acme-h4 {
  font-size: var(--acme-font-size-h4);
}

h5,
.acme-h5 {
  font-size: var(--acme-font-size-h5);
}

h6,
.acme-h6 {
  font-size: var(--acme-font-size-h6);
}

/* Text */
p {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
}

sup,
sub {
  position: relative;
  font-size: var(--acme-font-size-sup);
  line-height: 0;
  vertical-align: baseline;
}

sup {
  top: var(--acme-size-sup-offset);
}

sub {
  bottom: var(--acme-size-sub-offset);
}

/* Links */
a {
  color: var(--acme-color-link);
  text-decoration: underline;
}

a:hover {
  color: var(--acme-color-link-hover);
}

/* Lists */
ul,
ol {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
  padding-left: var(--acme-space-5);
}

li + li {
  margin-top: var(--acme-space-2);
}

/* Focus */
:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    scroll-behavior: auto !important;
    transition-duration: 0s !important;
    animation-duration: 0s !important;
  }
}

/* @authorkit-responsive global · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive global · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (desktop-first) > desktop-first: css/tokens.css 1`] = `
"/*!
 * Acme Health · css/tokens.css
 * Design tokens. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables defined:
 *   --acme-color-primary
 *   --acme-color-primary-hover
 *   --acme-color-on-primary
 *   --acme-color-text
 *   --acme-color-heading
 *   --acme-color-text-muted
 *   --acme-color-background
 *   --acme-color-surface
 *   --acme-color-border
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-focus
 *   --acme-color-focus-inverse
 *   --acme-color-disabled-background
 *   --acme-color-disabled-text
 *   --acme-color-overlay
 *   --acme-color-header-background
 *   --acme-color-footer-background
 *   --acme-color-footer-text
 *   --acme-color-footer-link
 *   --acme-color-isi-background
 *   --acme-color-isi-text
 *   --acme-color-isi-heading
 *   --acme-font-family-base
 *   --acme-font-family-heading
 *   --acme-font-size-xs
 *   --acme-font-size-sm
 *   --acme-font-size-base
 *   --acme-font-size-lg
 *   --acme-font-size-h1
 *   --acme-font-size-h2
 *   --acme-font-size-h3
 *   --acme-font-size-h4
 *   --acme-font-size-h5
 *   --acme-font-size-h6
 *   --acme-font-size-sup
 *   --acme-font-weight-regular
 *   --acme-font-weight-bold
 *   --acme-line-height-body
 *   --acme-line-height-heading
 *   --acme-line-height-tight
 *   --acme-letter-spacing-heading
 *   --acme-space-1
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-space-6
 *   --acme-space-7
 *   --acme-space-8
 *   --acme-radius-sm
 *   --acme-radius-md
 *   --acme-radius-lg
 *   --acme-radius-pill
 *   --acme-border-width
 *   --acme-shadow-sm
 *   --acme-shadow-md
 *   --acme-shadow-lg
 *   --acme-z-header
 *   --acme-z-isi-bar
 *   --acme-z-modal
 *   --acme-duration-fast
 *   --acme-duration-base
 *   --acme-size-container-max
 *   --acme-size-gutter
 *   --acme-size-header-height
 *   --acme-size-logo-height
 *   --acme-size-icon
 *   --acme-size-touch-target
 *   --acme-size-focus-ring
 *   --acme-size-focus-offset
 *   --acme-size-modal-max
 *   --acme-size-modal-narrow
 *   --acme-size-isi-bar-collapsed
 *   --acme-size-isi-bar-expanded
 *   --acme-size-sup-offset
 *   --acme-size-sub-offset
 */

:root {
  --acme-color-primary: #0b4f8a;
  --acme-color-primary-hover: #083a66;
  --acme-color-on-primary: #fff;
  --acme-color-text: #1f2329;
  --acme-color-heading: #111418;
  --acme-color-text-muted: #545b66;
  --acme-color-background: #fff;
  --acme-color-surface: #f4f6f8;
  --acme-color-border: #c9cfd6;
  --acme-color-link: #0b4f8a;
  --acme-color-link-hover: #083a66;
  --acme-color-focus: #b84a00;
  --acme-color-focus-inverse: #ffbf47;
  --acme-color-disabled-background: #e3e6ea;
  --acme-color-disabled-text: #5f6670;
  --acme-color-overlay: rgb(17 20 24 / 60%);
  --acme-color-header-background: #fff;
  --acme-color-footer-background: #1f2329;
  --acme-color-footer-text: #fff;
  --acme-color-footer-link: #fff;
  --acme-color-isi-background: #f4f6f8;
  --acme-color-isi-text: #1f2329;
  --acme-color-isi-heading: #111418;
  --acme-font-family-base: system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", arial, sans-serif;
  --acme-font-family-heading: system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", arial, sans-serif;
  --acme-font-size-xs: 0.75rem;
  --acme-font-size-sm: 0.875rem;
  --acme-font-size-base: 1rem;
  --acme-font-size-lg: 1.125rem;
  --acme-font-size-h1: 2.75rem;
  --acme-font-size-h2: 2.25rem;
  --acme-font-size-h3: 1.75rem;
  --acme-font-size-h4: 1.375rem;
  --acme-font-size-h5: 1.125rem;
  --acme-font-size-h6: 1rem;
  --acme-font-size-sup: 0.75em;
  --acme-font-weight-regular: 400;
  --acme-font-weight-bold: 700;
  --acme-line-height-body: 1.5;
  --acme-line-height-heading: 1.2;
  --acme-line-height-tight: 1.1;
  --acme-letter-spacing-heading: -0.01em;
  --acme-space-1: 0.25rem;
  --acme-space-2: 0.5rem;
  --acme-space-3: 0.75rem;
  --acme-space-4: 1rem;
  --acme-space-5: 1.5rem;
  --acme-space-6: 2rem;
  --acme-space-7: 3rem;
  --acme-space-8: 4rem;
  --acme-radius-sm: 4px;
  --acme-radius-md: 8px;
  --acme-radius-lg: 16px;
  --acme-radius-pill: 999px;
  --acme-border-width: 1px;
  --acme-shadow-sm: 0 1px 2px rgb(17 20 24 / 8%);
  --acme-shadow-md: 0 4px 12px rgb(17 20 24 / 12%);
  --acme-shadow-lg: 0 12px 32px rgb(17 20 24 / 18%);
  --acme-z-header: 100;
  --acme-z-isi-bar: 200;
  --acme-z-modal: 1000;
  --acme-duration-fast: 150ms;
  --acme-duration-base: 250ms;
  --acme-size-container-max: 75rem;
  --acme-size-gutter: 2rem;
  --acme-size-header-height: 5rem;
  --acme-size-logo-height: 2.5rem;
  --acme-size-icon: 1.25rem;
  --acme-size-touch-target: 2.75rem;
  --acme-size-focus-ring: 3px;
  --acme-size-focus-offset: 2px;
  --acme-size-modal-max: 40rem;
  --acme-size-modal-narrow: 30rem;
  --acme-size-isi-bar-collapsed: 7.5rem;
  --acme-size-isi-bar-expanded: 70vh;
  --acme-size-sup-offset: -0.5em;
  --acme-size-sub-offset: 0.25em;
}

/* @authorkit-responsive tokens · tablet (768px – 1023px) */
@media (max-width: 1023px) {
  :root {
    --acme-font-size-h1: 2rem;
    --acme-font-size-h2: 1.625rem;
    --acme-font-size-h3: 1.375rem;
    --acme-font-size-h4: 1.25rem;
    --acme-size-gutter: 1rem;
    --acme-size-header-height: 4rem;
    --acme-size-logo-height: 2rem;
  }
}

/* @authorkit-responsive tokens · mobile (≤ 767px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: README.md 1`] = `
"# Acme Health CSS package

Generated by AuthorKit from the “Spring launch” project.

- **Class prefix:** \`acme\`
- **Responsive approach:** mobile-first
- **Files:** 8 stylesheets plus \`acme-health.css\`

> Do not edit these files by hand. Change the project in AuthorKit and regenerate,
> so the CSS, the style guide and this README stay in sync.

## Quick start

\`\`\`html
<link rel="stylesheet" href="acme-health.css">
\`\`\`

\`acme-health.css\` imports every stylesheet in the right order. To load the files yourself
(for example in an AEM clientlib), keep this order:

1. \`css/tokens.css\`: Design tokens
2. \`css/global.css\`: Global (type, links, base)
3. \`css/components/cta.css\`: CTA buttons
4. \`css/components/accordion.css\`: Accordion
5. \`css/components/header.css\`: Header
6. \`css/components/footer.css\`: Footer
7. \`css/components/isi.css\`: ISI and safety bar
8. \`css/components/modals.css\`: Modals

## Folder structure

\`\`\`
acme-health/
├── acme-health.css  ← entry: imports every stylesheet
├── README.md  ← this file
└── css/
    ├── tokens.css  ← tokens
    ├── global.css  ← global
    └── components/
        ├── header.css  ← header
        ├── footer.css  ← footer
        ├── isi.css  ← isi
        ├── modals.css  ← modals
        ├── cta.css  ← cta
        └── accordion.css  ← accordion
\`\`\`

## Breakpoints

| Name | Screen width | Media query |
| --- | --- | --- |
| mobile | ≤ 767px | base styles (no media query) |
| tablet | 768px – 1023px | \`@media (min-width: 768px)\` |
| desktop | ≥ 1024px | \`@media (min-width: 1024px)\` |

Mobile-first: base styles target the smallest screen. Each \`min-width\` query adds changes for larger screens.
Look for \`/* @authorkit-responsive … */\` comments in each file to find the overrides for a breakpoint.

## Naming

Every class uses BEM with the \`acme-\` prefix, so these styles cannot collide with other CSS on the page:

- Block: \`.acme-btn\`
- Element: \`.acme-btn__icon\`
- Modifier: \`.acme-btn--primary\`
- Custom property (token): \`--acme-color-primary\`

\`global.css\` also styles plain HTML elements (\`h1\`–\`h6\`, \`p\`, \`a\`, \`sup\`, \`sub\`, lists and images),
so rich text from authors is styled without extra classes.

## Customising

All design values are CSS custom properties. Override a token after loading the package:

\`\`\`css
:root {
  --acme-color-primary: #0b4f8a;
}
\`\`\`

## Components

| File | Component | Classes |
| --- | --- | --- |
| \`css/global.css\` | Global (type, links, base) | \`.acme-h1\` \`.acme-h2\` \`.acme-h3\` \`.acme-h4\` \`.acme-h5\` \`.acme-h6\` |
| \`css/components/header.css\` | Header | \`.acme-header\` \`.acme-header--sticky\` \`.acme-header__inner\` \`.acme-header__logo\` \`.acme-header__toggle\` \`.acme-header__nav\` \`.acme-header__list\` \`.acme-header__link\` |
| \`css/components/footer.css\` | Footer | \`.acme-footer\` \`.acme-footer__inner\` \`.acme-footer__logo\` \`.acme-footer__links\` \`.acme-footer__link\` \`.acme-footer__legal\` \`.acme-footer__copyright\` |
| \`css/components/isi.css\` | ISI and safety bar | \`.acme-isi\` \`.acme-isi__content\` \`.acme-isi__title\` \`.acme-isi__section\` \`.acme-isi-bar\` \`.acme-isi-bar--expanded\` \`.acme-isi-bar__header\` \`.acme-isi-bar__title\` \`.acme-isi-bar__toggle\` \`.acme-isi-bar__icon\` \`.acme-isi-bar__content\` \`.acme-isi-bar-spacer\` |
| \`css/components/modals.css\` | Modals | \`.acme-modal\` \`.acme-modal--interstitial\` \`.acme-modal__header\` \`.acme-modal__title\` \`.acme-modal__close\` \`.acme-modal__body\` \`.acme-modal__footer\` \`.acme-modal-open\` |
| \`css/components/cta.css\` | CTA buttons | \`.acme-btn\` \`.acme-btn--primary\` \`.acme-btn--secondary\` \`.acme-btn--tertiary\` \`.acme-btn--block\` \`.acme-btn__icon\` |
| \`css/components/accordion.css\` | Accordion | \`.acme-accordion\` \`.acme-accordion__item\` \`.acme-accordion__heading\` \`.acme-accordion__trigger\` \`.acme-accordion__icon\` \`.acme-accordion__panel\` |
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: acme-health.css 1`] = `
"/*!
 * Acme Health · acme-health.css
 * Package entry. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Link this one file, or load the files below yourself in the same order.
 */

@import url("css/tokens.css");
@import url("css/global.css");
@import url("css/components/cta.css");
@import url("css/components/accordion.css");
@import url("css/components/header.css");
@import url("css/components/footer.css");
@import url("css/components/isi.css");
@import url("css/components/modals.css");
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/accordion.css 1`] = `
"/*!
 * Acme Health · css/components/accordion.css
 * Accordion. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-accordion-border-color
 *   --acme-accordion-padding-y
 *   --acme-accordion-title-size
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-heading
 *   --acme-color-link
 *   --acme-duration-fast
 *   --acme-font-size-lg
 *   --acme-font-weight-bold
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-icon
 *   --acme-space-4
 */

.acme-accordion {
  --acme-accordion-border-color: var(--acme-color-border);
  --acme-accordion-padding-y: var(--acme-space-4);
  --acme-accordion-title-size: var(--acme-font-size-lg);

  border-top: var(--acme-border-width) solid var(--acme-accordion-border-color);
}

.acme-accordion__item {
  border-bottom: var(--acme-border-width) solid var(--acme-accordion-border-color);
}

.acme-accordion__heading {
  margin: 0;
  font-size: inherit;
}

.acme-accordion__trigger {
  display: flex;
  gap: var(--acme-space-4);
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: var(--acme-accordion-padding-y) 0;
  border: 0;
  background-color: transparent;
  color: var(--acme-color-heading);
  font: inherit;
  font-size: var(--acme-accordion-title-size);
  font-weight: var(--acme-font-weight-bold);
  text-align: left;
  cursor: pointer;
}

.acme-accordion__trigger:hover {
  color: var(--acme-color-link);
}

.acme-accordion__trigger:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-accordion__icon {
  flex: none;
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
  transition: transform var(--acme-duration-fast) ease;
}

.acme-accordion__trigger[aria-expanded="true"] .acme-accordion__icon {
  transform: rotate(180deg);
}

.acme-accordion__panel {
  padding: 0 0 var(--acme-accordion-padding-y);
}

.acme-accordion__panel[hidden] {
  display: none;
}

@media (prefers-reduced-motion: reduce) {
  .acme-accordion__icon {
    transition: none;
  }
}

/* @authorkit-responsive accordion · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive accordion · desktop (≥ 1024px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/cta.css 1`] = `
"/*!
 * Acme Health · css/components/cta.css
 * CTA buttons. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-btn-bg
 *   --acme-btn-bg-hover
 *   --acme-btn-border-color
 *   --acme-btn-border-color-hover
 *   --acme-btn-color
 *   --acme-btn-color-hover
 *   --acme-btn-font-size
 *   --acme-btn-padding-x
 *   --acme-btn-padding-y
 *   --acme-btn-radius
 *   --acme-color-disabled-background
 *   --acme-color-disabled-text
 *   --acme-color-focus
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-on-primary
 *   --acme-color-primary
 *   --acme-color-primary-hover
 *   --acme-duration-fast
 *   --acme-font-size-base
 *   --acme-font-weight-bold
 *   --acme-line-height-tight
 *   --acme-radius-pill
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-icon
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-5
 */

.acme-btn {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary);
  --acme-btn-padding-y: var(--acme-space-3);
  --acme-btn-padding-x: var(--acme-space-5);
  --acme-btn-radius: var(--acme-radius-pill);
  --acme-btn-font-size: var(--acme-font-size-base);

  display: inline-flex;
  gap: var(--acme-space-2);
  align-items: center;
  justify-content: center;
  padding: var(--acme-btn-padding-y) var(--acme-btn-padding-x);
  border: var(--acme-border-width) solid var(--acme-btn-border-color);
  border-radius: var(--acme-btn-radius);
  background-color: var(--acme-btn-bg);
  color: var(--acme-btn-color);
  font-family: inherit;
  font-size: var(--acme-btn-font-size);
  font-weight: var(--acme-font-weight-bold);
  line-height: var(--acme-line-height-tight);
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  transition:
    background-color var(--acme-duration-fast) ease,
    border-color var(--acme-duration-fast) ease,
    color var(--acme-duration-fast) ease;
}

.acme-btn:hover {
  border-color: var(--acme-btn-border-color-hover);
  background-color: var(--acme-btn-bg-hover);
  color: var(--acme-btn-color-hover);
}

.acme-btn:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

/* Variants */
.acme-btn--primary {
  --acme-btn-bg: var(--acme-color-primary);
  --acme-btn-color: var(--acme-color-on-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary-hover);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary-hover);
}

.acme-btn--secondary {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-primary);
  --acme-btn-border-color: var(--acme-color-primary);
  --acme-btn-bg-hover: var(--acme-color-primary);
  --acme-btn-color-hover: var(--acme-color-on-primary);
  --acme-btn-border-color-hover: var(--acme-color-primary);
}

.acme-btn--tertiary {
  --acme-btn-bg: transparent;
  --acme-btn-color: var(--acme-color-link);
  --acme-btn-border-color: transparent;
  --acme-btn-bg-hover: transparent;
  --acme-btn-color-hover: var(--acme-color-link-hover);
  --acme-btn-border-color-hover: transparent;
  --acme-btn-padding-x: 0;

  text-decoration: underline;
}

.acme-btn--block {
  display: flex;
  width: 100%;
}

.acme-btn__icon {
  flex: none;
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
}

/* Disabled: after the variants so it wins over all of them */
.acme-btn:disabled,
.acme-btn[aria-disabled="true"] {
  --acme-btn-bg: var(--acme-color-disabled-background);
  --acme-btn-color: var(--acme-color-disabled-text);
  --acme-btn-border-color: var(--acme-color-disabled-background);
  --acme-btn-bg-hover: var(--acme-color-disabled-background);
  --acme-btn-color-hover: var(--acme-color-disabled-text);
  --acme-btn-border-color-hover: var(--acme-color-disabled-background);

  cursor: not-allowed;
}

@media (prefers-reduced-motion: reduce) {
  .acme-btn {
    transition: none;
  }
}

/* @authorkit-responsive cta · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive cta · desktop (≥ 1024px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/footer.css 1`] = `
"/*!
 * Acme Health · css/components/footer.css
 * Footer. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-focus-inverse
 *   --acme-color-footer-background
 *   --acme-color-footer-link
 *   --acme-color-footer-text
 *   --acme-font-size-sm
 *   --acme-footer-align
 *   --acme-footer-bg
 *   --acme-footer-color
 *   --acme-footer-direction
 *   --acme-footer-link-color
 *   --acme-footer-padding-y
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-logo-height
 *   --acme-space-3
 *   --acme-space-5
 *   --acme-space-7
 */

.acme-footer {
  --acme-footer-direction: column;
  --acme-footer-align: flex-start;
  --acme-footer-bg: var(--acme-color-footer-background);
  --acme-footer-color: var(--acme-color-footer-text);
  --acme-footer-link-color: var(--acme-color-footer-link);
  --acme-footer-padding-y: var(--acme-space-7);

  background-color: var(--acme-footer-bg);
  color: var(--acme-footer-color);
  font-size: var(--acme-font-size-sm);
}

.acme-footer__inner {
  display: flex;
  flex-direction: var(--acme-footer-direction);
  gap: var(--acme-space-5);
  align-items: var(--acme-footer-align);
  justify-content: space-between;
  max-width: var(--acme-size-container-max);
  margin: 0 auto;
  padding: var(--acme-footer-padding-y) var(--acme-size-gutter);
}

.acme-footer__logo {
  display: inline-flex;
  color: inherit;
}

.acme-footer__logo img {
  display: block;
  width: auto;
  height: var(--acme-size-logo-height);
}

.acme-footer__links {
  display: flex;
  flex-wrap: wrap;
  gap: var(--acme-space-3) var(--acme-space-5);
  margin: 0;
  padding: 0;
  list-style: none;
}

.acme-footer__links li + li {
  margin-top: 0;
}

.acme-footer__link {
  color: var(--acme-footer-link-color);
  text-decoration: underline;
}

.acme-footer__link:hover {
  color: var(--acme-footer-link-color);
  text-decoration: none;
}

.acme-footer__logo:focus-visible,
.acme-footer__link:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus-inverse);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-footer__legal,
.acme-footer__copyright {
  margin: 0;
}

/* @authorkit-responsive footer · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive footer · desktop (≥ 1024px) */
@media (min-width: 1024px) {
  .acme-footer {
    --acme-footer-direction: row;
    --acme-footer-align: center;
  }
}
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/header.css 1`] = `
"/*!
 * Acme Health · css/components/header.css
 * Header. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-header-background
 *   --acme-color-link
 *   --acme-color-text
 *   --acme-font-weight-bold
 *   --acme-header-bg
 *   --acme-header-color
 *   --acme-header-list-direction
 *   --acme-header-nav-display
 *   --acme-header-nav-padding
 *   --acme-header-nav-position
 *   --acme-header-nav-shadow
 *   --acme-header-shadow
 *   --acme-header-toggle-display
 *   --acme-radius-sm
 *   --acme-shadow-md
 *   --acme-shadow-sm
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-header-height
 *   --acme-size-logo-height
 *   --acme-size-touch-target
 *   --acme-space-2
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-z-header
 */

.acme-header {
  --acme-header-toggle-display: inline-flex;
  --acme-header-nav-display: none;
  --acme-header-nav-position: absolute;
  --acme-header-nav-padding: var(--acme-space-4) var(--acme-size-gutter);
  --acme-header-nav-shadow: var(--acme-shadow-md);
  --acme-header-list-direction: column;
  --acme-header-bg: var(--acme-color-header-background);
  --acme-header-color: var(--acme-color-text);
  --acme-header-shadow: var(--acme-shadow-sm);

  position: relative;
  z-index: var(--acme-z-header);
  background-color: var(--acme-header-bg);
  color: var(--acme-header-color);
  box-shadow: var(--acme-header-shadow);
}

.acme-header--sticky {
  position: sticky;
  top: 0;
}

.acme-header__inner {
  display: flex;
  gap: var(--acme-space-4);
  align-items: center;
  justify-content: space-between;
  max-width: var(--acme-size-container-max);
  min-height: var(--acme-size-header-height);
  margin: 0 auto;
  padding: 0 var(--acme-size-gutter);
}

.acme-header__logo {
  display: inline-flex;
  align-items: center;
  color: inherit;
  text-decoration: none;
}

.acme-header__logo img {
  display: block;
  width: auto;
  height: var(--acme-size-logo-height);
}

/* Menu button: shown on small screens, hidden where the nav fits inline */
.acme-header__toggle {
  display: var(--acme-header-toggle-display);
  align-items: center;
  justify-content: center;
  min-width: var(--acme-size-touch-target);
  min-height: var(--acme-size-touch-target);
  padding: var(--acme-space-2);
  border: var(--acme-border-width) solid var(--acme-color-border);
  border-radius: var(--acme-radius-sm);
  background-color: transparent;
  color: inherit;
  font: inherit;
  cursor: pointer;
}

.acme-header__nav {
  display: var(--acme-header-nav-display);
  position: var(--acme-header-nav-position);
  top: 100%;
  right: 0;
  left: 0;
  padding: var(--acme-header-nav-padding);
  background-color: var(--acme-header-bg);
  box-shadow: var(--acme-header-nav-shadow);
}

/* Open state: the toggle sits directly before the nav and carries aria-expanded */
.acme-header__toggle[aria-expanded="true"] + .acme-header__nav {
  display: block;
}

.acme-header__list {
  display: flex;
  flex-direction: var(--acme-header-list-direction);
  gap: var(--acme-space-2) var(--acme-space-5);
  margin: 0;
  padding: 0;
  list-style: none;
}

.acme-header__list li + li {
  margin-top: 0;
}

.acme-header__link {
  display: block;
  padding: var(--acme-space-2) 0;
  color: var(--acme-header-color);
  font-weight: var(--acme-font-weight-bold);
  text-decoration: none;
}

.acme-header__link:hover,
.acme-header__link[aria-current="page"] {
  color: var(--acme-color-link);
  text-decoration: underline;
}

.acme-header__toggle:focus-visible,
.acme-header__link:focus-visible,
.acme-header__logo:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

/* @authorkit-responsive header · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive header · desktop (≥ 1024px) */
@media (min-width: 1024px) {
  .acme-header {
    --acme-header-toggle-display: none;
    --acme-header-nav-display: block;
    --acme-header-nav-position: static;
    --acme-header-nav-padding: 0;
    --acme-header-nav-shadow: none;
    --acme-header-list-direction: row;
  }
}
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/isi.css 1`] = `
"/*!
 * Acme Health · css/components/isi.css
 * ISI and safety bar. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-border-width
 *   --acme-color-border
 *   --acme-color-focus
 *   --acme-color-isi-background
 *   --acme-color-isi-heading
 *   --acme-color-isi-text
 *   --acme-duration-base
 *   --acme-duration-fast
 *   --acme-font-size-base
 *   --acme-font-size-lg
 *   --acme-font-size-sm
 *   --acme-font-weight-bold
 *   --acme-isi-bar-bg
 *   --acme-isi-bar-color
 *   --acme-isi-bar-max-height
 *   --acme-isi-bg
 *   --acme-isi-color
 *   --acme-isi-padding-y
 *   --acme-line-height-body
 *   --acme-radius-pill
 *   --acme-shadow-lg
 *   --acme-size-container-max
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-icon
 *   --acme-size-isi-bar-collapsed
 *   --acme-size-isi-bar-expanded
 *   --acme-size-touch-target
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-space-6
 *   --acme-z-isi-bar
 */

/* In-page Important Safety Information */
.acme-isi {
  --acme-isi-bg: var(--acme-color-isi-background);
  --acme-isi-color: var(--acme-color-isi-text);
  --acme-isi-padding-y: var(--acme-space-6);

  padding: var(--acme-isi-padding-y) var(--acme-size-gutter);
  background-color: var(--acme-isi-bg);
  color: var(--acme-isi-color);
  font-size: var(--acme-font-size-sm);
  line-height: var(--acme-line-height-body);
}

.acme-isi__content {
  max-width: var(--acme-size-container-max);
  margin: 0 auto;
}

.acme-isi__title {
  margin: 0 0 var(--acme-space-3);
  color: var(--acme-color-isi-heading);
  font-size: var(--acme-font-size-lg);
  font-weight: var(--acme-font-weight-bold);
}

.acme-isi__section + .acme-isi__section {
  margin-top: var(--acme-space-5);
}

/* Sticky safety bar: collapsed by default, expanded with the modifier */
.acme-isi-bar {
  --acme-isi-bar-max-height: var(--acme-size-isi-bar-collapsed);
  --acme-isi-bar-bg: var(--acme-color-isi-background);
  --acme-isi-bar-color: var(--acme-color-isi-text);

  display: flex;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: var(--acme-z-isi-bar);
  flex-direction: column;
  max-height: var(--acme-isi-bar-max-height);
  background-color: var(--acme-isi-bar-bg);
  color: var(--acme-isi-bar-color);
  box-shadow: var(--acme-shadow-lg);
  transition: max-height var(--acme-duration-base) ease;
}

.acme-isi-bar--expanded {
  --acme-isi-bar-max-height: var(--acme-size-isi-bar-expanded);
}

.acme-isi-bar__header {
  display: flex;
  flex: none;
  gap: var(--acme-space-3);
  align-items: center;
  justify-content: space-between;
  padding: var(--acme-space-3) var(--acme-size-gutter);
  border-bottom: var(--acme-border-width) solid var(--acme-color-border);
}

.acme-isi-bar__title {
  margin: 0;
  color: var(--acme-color-isi-heading);
  font-size: var(--acme-font-size-base);
  font-weight: var(--acme-font-weight-bold);
}

.acme-isi-bar__toggle {
  display: inline-flex;
  flex: none;
  gap: var(--acme-space-2);
  align-items: center;
  min-height: var(--acme-size-touch-target);
  padding: var(--acme-space-2) var(--acme-space-4);
  border: var(--acme-border-width) solid currentcolor;
  border-radius: var(--acme-radius-pill);
  background-color: transparent;
  color: inherit;
  font: inherit;
  font-size: var(--acme-font-size-sm);
  font-weight: var(--acme-font-weight-bold);
  cursor: pointer;
}

.acme-isi-bar__toggle:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-isi-bar__icon {
  width: var(--acme-size-icon);
  height: var(--acme-size-icon);
  transition: transform var(--acme-duration-fast) ease;
}

.acme-isi-bar--expanded .acme-isi-bar__icon {
  transform: rotate(180deg);
}

.acme-isi-bar__content {
  overflow-y: auto;
  padding: var(--acme-space-3) var(--acme-size-gutter) var(--acme-space-4);
  font-size: var(--acme-font-size-sm);
}

/* Keeps page content clear of the fixed bar; place at the end of the page */
.acme-isi-bar-spacer {
  height: var(--acme-size-isi-bar-collapsed);
}

@media (prefers-reduced-motion: reduce) {
  .acme-isi-bar,
  .acme-isi-bar__icon {
    transition: none;
  }
}

/* @authorkit-responsive isi · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive isi · desktop (≥ 1024px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/components/modals.css 1`] = `
"/*!
 * Acme Health · css/components/modals.css
 * Modals. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-background
 *   --acme-color-focus
 *   --acme-color-overlay
 *   --acme-color-surface
 *   --acme-color-text
 *   --acme-font-size-h4
 *   --acme-font-size-lg
 *   --acme-modal-bg
 *   --acme-modal-padding
 *   --acme-modal-radius
 *   --acme-modal-width
 *   --acme-radius-lg
 *   --acme-radius-pill
 *   --acme-shadow-lg
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-gutter
 *   --acme-size-modal-max
 *   --acme-size-modal-narrow
 *   --acme-size-touch-target
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 */

/* Built on the native <dialog> element: showModal() provides the focus trap and Escape */
.acme-modal {
  --acme-modal-width: var(--acme-size-modal-max);
  --acme-modal-padding: var(--acme-space-5);
  --acme-modal-radius: var(--acme-radius-lg);
  --acme-modal-bg: var(--acme-color-background);

  width: min(100% - 2 * var(--acme-size-gutter), var(--acme-modal-width));
  max-height: calc(100% - 2 * var(--acme-size-gutter));
  margin: auto;
  padding: 0;
  border: 0;
  border-radius: var(--acme-modal-radius);
  background-color: var(--acme-modal-bg);
  color: var(--acme-color-text);
  box-shadow: var(--acme-shadow-lg);
}

.acme-modal[open] {
  display: flex;
  flex-direction: column;
}

.acme-modal::backdrop {
  background-color: var(--acme-color-overlay);
}

.acme-modal__header {
  display: flex;
  flex: none;
  gap: var(--acme-space-4);
  align-items: flex-start;
  justify-content: space-between;
  padding: var(--acme-modal-padding) var(--acme-modal-padding) 0;
}

.acme-modal__title {
  margin: 0;
  font-size: var(--acme-font-size-h4);
}

.acme-modal__close {
  display: inline-flex;
  flex: none;
  align-items: center;
  justify-content: center;
  width: var(--acme-size-touch-target);
  height: var(--acme-size-touch-target);
  padding: 0;
  border: 0;
  border-radius: var(--acme-radius-pill);
  background-color: transparent;
  color: inherit;
  font: inherit;
  font-size: var(--acme-font-size-lg);
  cursor: pointer;
}

.acme-modal__close:hover {
  background-color: var(--acme-color-surface);
}

.acme-modal__close:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

.acme-modal__body {
  overflow-y: auto;
  padding: var(--acme-modal-padding);
}

.acme-modal__footer {
  display: flex;
  flex: none;
  flex-wrap: wrap;
  gap: var(--acme-space-3);
  justify-content: flex-end;
  padding: 0 var(--acme-modal-padding) var(--acme-modal-padding);
}

/* Leaving-site / interstitial warning */
.acme-modal--interstitial {
  --acme-modal-width: var(--acme-size-modal-narrow);
}

/* Set on <body> while a modal is open to stop the page scrolling behind it */
.acme-modal-open {
  overflow: hidden;
}

/* @authorkit-responsive modals · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive modals · desktop (≥ 1024px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/global.css 1`] = `
"/*!
 * Acme Health · css/global.css
 * Global styles. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables used:
 *   --acme-color-background
 *   --acme-color-focus
 *   --acme-color-heading
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-text
 *   --acme-font-family-base
 *   --acme-font-family-heading
 *   --acme-font-size-base
 *   --acme-font-size-h1
 *   --acme-font-size-h2
 *   --acme-font-size-h3
 *   --acme-font-size-h4
 *   --acme-font-size-h5
 *   --acme-font-size-h6
 *   --acme-font-size-sup
 *   --acme-font-weight-bold
 *   --acme-font-weight-regular
 *   --acme-letter-spacing-heading
 *   --acme-line-height-body
 *   --acme-line-height-heading
 *   --acme-size-focus-offset
 *   --acme-size-focus-ring
 *   --acme-size-sub-offset
 *   --acme-size-sup-offset
 *   --acme-space-2
 *   --acme-space-4
 *   --acme-space-5
 */

/* Base reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: var(--acme-color-background);
  color: var(--acme-color-text);
  font-family: var(--acme-font-family-base);
  font-size: var(--acme-font-size-base);
  font-weight: var(--acme-font-weight-regular);
  line-height: var(--acme-line-height-body);
}

img {
  max-width: 100%;
  height: auto;
}

/* Headings: elements, plus classes for a visual level that differs from the semantic one */
h1,
h2,
h3,
h4,
h5,
h6,
.acme-h1,
.acme-h2,
.acme-h3,
.acme-h4,
.acme-h5,
.acme-h6 {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
  color: var(--acme-color-heading);
  font-family: var(--acme-font-family-heading);
  font-weight: var(--acme-font-weight-bold);
  line-height: var(--acme-line-height-heading);
  letter-spacing: var(--acme-letter-spacing-heading);
}

h1,
.acme-h1 {
  font-size: var(--acme-font-size-h1);
}

h2,
.acme-h2 {
  font-size: var(--acme-font-size-h2);
}

h3,
.acme-h3 {
  font-size: var(--acme-font-size-h3);
}

h4,
.acme-h4 {
  font-size: var(--acme-font-size-h4);
}

h5,
.acme-h5 {
  font-size: var(--acme-font-size-h5);
}

h6,
.acme-h6 {
  font-size: var(--acme-font-size-h6);
}

/* Text */
p {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
}

sup,
sub {
  position: relative;
  font-size: var(--acme-font-size-sup);
  line-height: 0;
  vertical-align: baseline;
}

sup {
  top: var(--acme-size-sup-offset);
}

sub {
  bottom: var(--acme-size-sub-offset);
}

/* Links */
a {
  color: var(--acme-color-link);
  text-decoration: underline;
}

a:hover {
  color: var(--acme-color-link-hover);
}

/* Lists */
ul,
ol {
  margin-top: 0;
  margin-bottom: var(--acme-space-4);
  padding-left: var(--acme-space-5);
}

li + li {
  margin-top: var(--acme-space-2);
}

/* Focus */
:focus-visible {
  outline: var(--acme-size-focus-ring) solid var(--acme-color-focus);
  outline-offset: var(--acme-size-focus-offset);
}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    scroll-behavior: auto !important;
    transition-duration: 0s !important;
    animation-duration: 0s !important;
  }
}

/* @authorkit-responsive global · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive global · desktop (≥ 1024px): no overrides */
"
`;

exports[`generatePackage > matches the snapshot (mobile-first) > mobile-first: css/tokens.css 1`] = `
"/*!
 * Acme Health · css/tokens.css
 * Design tokens. Generated by AuthorKit; regenerate instead of editing by hand.
 *
 * Variables defined:
 *   --acme-color-primary
 *   --acme-color-primary-hover
 *   --acme-color-on-primary
 *   --acme-color-text
 *   --acme-color-heading
 *   --acme-color-text-muted
 *   --acme-color-background
 *   --acme-color-surface
 *   --acme-color-border
 *   --acme-color-link
 *   --acme-color-link-hover
 *   --acme-color-focus
 *   --acme-color-focus-inverse
 *   --acme-color-disabled-background
 *   --acme-color-disabled-text
 *   --acme-color-overlay
 *   --acme-color-header-background
 *   --acme-color-footer-background
 *   --acme-color-footer-text
 *   --acme-color-footer-link
 *   --acme-color-isi-background
 *   --acme-color-isi-text
 *   --acme-color-isi-heading
 *   --acme-font-family-base
 *   --acme-font-family-heading
 *   --acme-font-size-xs
 *   --acme-font-size-sm
 *   --acme-font-size-base
 *   --acme-font-size-lg
 *   --acme-font-size-h1
 *   --acme-font-size-h2
 *   --acme-font-size-h3
 *   --acme-font-size-h4
 *   --acme-font-size-h5
 *   --acme-font-size-h6
 *   --acme-font-size-sup
 *   --acme-font-weight-regular
 *   --acme-font-weight-bold
 *   --acme-line-height-body
 *   --acme-line-height-heading
 *   --acme-line-height-tight
 *   --acme-letter-spacing-heading
 *   --acme-space-1
 *   --acme-space-2
 *   --acme-space-3
 *   --acme-space-4
 *   --acme-space-5
 *   --acme-space-6
 *   --acme-space-7
 *   --acme-space-8
 *   --acme-radius-sm
 *   --acme-radius-md
 *   --acme-radius-lg
 *   --acme-radius-pill
 *   --acme-border-width
 *   --acme-shadow-sm
 *   --acme-shadow-md
 *   --acme-shadow-lg
 *   --acme-z-header
 *   --acme-z-isi-bar
 *   --acme-z-modal
 *   --acme-duration-fast
 *   --acme-duration-base
 *   --acme-size-container-max
 *   --acme-size-gutter
 *   --acme-size-header-height
 *   --acme-size-logo-height
 *   --acme-size-icon
 *   --acme-size-touch-target
 *   --acme-size-focus-ring
 *   --acme-size-focus-offset
 *   --acme-size-modal-max
 *   --acme-size-modal-narrow
 *   --acme-size-isi-bar-collapsed
 *   --acme-size-isi-bar-expanded
 *   --acme-size-sup-offset
 *   --acme-size-sub-offset
 */

:root {
  --acme-color-primary: #0b4f8a;
  --acme-color-primary-hover: #083a66;
  --acme-color-on-primary: #fff;
  --acme-color-text: #1f2329;
  --acme-color-heading: #111418;
  --acme-color-text-muted: #545b66;
  --acme-color-background: #fff;
  --acme-color-surface: #f4f6f8;
  --acme-color-border: #c9cfd6;
  --acme-color-link: #0b4f8a;
  --acme-color-link-hover: #083a66;
  --acme-color-focus: #b84a00;
  --acme-color-focus-inverse: #ffbf47;
  --acme-color-disabled-background: #e3e6ea;
  --acme-color-disabled-text: #5f6670;
  --acme-color-overlay: rgb(17 20 24 / 60%);
  --acme-color-header-background: #fff;
  --acme-color-footer-background: #1f2329;
  --acme-color-footer-text: #fff;
  --acme-color-footer-link: #fff;
  --acme-color-isi-background: #f4f6f8;
  --acme-color-isi-text: #1f2329;
  --acme-color-isi-heading: #111418;
  --acme-font-family-base: system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", arial, sans-serif;
  --acme-font-family-heading: system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", arial, sans-serif;
  --acme-font-size-xs: 0.75rem;
  --acme-font-size-sm: 0.875rem;
  --acme-font-size-base: 1rem;
  --acme-font-size-lg: 1.125rem;
  --acme-font-size-h1: 2rem;
  --acme-font-size-h2: 1.625rem;
  --acme-font-size-h3: 1.375rem;
  --acme-font-size-h4: 1.25rem;
  --acme-font-size-h5: 1.125rem;
  --acme-font-size-h6: 1rem;
  --acme-font-size-sup: 0.75em;
  --acme-font-weight-regular: 400;
  --acme-font-weight-bold: 700;
  --acme-line-height-body: 1.5;
  --acme-line-height-heading: 1.2;
  --acme-line-height-tight: 1.1;
  --acme-letter-spacing-heading: -0.01em;
  --acme-space-1: 0.25rem;
  --acme-space-2: 0.5rem;
  --acme-space-3: 0.75rem;
  --acme-space-4: 1rem;
  --acme-space-5: 1.5rem;
  --acme-space-6: 2rem;
  --acme-space-7: 3rem;
  --acme-space-8: 4rem;
  --acme-radius-sm: 4px;
  --acme-radius-md: 8px;
  --acme-radius-lg: 16px;
  --acme-radius-pill: 999px;
  --acme-border-width: 1px;
  --acme-shadow-sm: 0 1px 2px rgb(17 20 24 / 8%);
  --acme-shadow-md: 0 4px 12px rgb(17 20 24 / 12%);
  --acme-shadow-lg: 0 12px 32px rgb(17 20 24 / 18%);
  --acme-z-header: 100;
  --acme-z-isi-bar: 200;
  --acme-z-modal: 1000;
  --acme-duration-fast: 150ms;
  --acme-duration-base: 250ms;
  --acme-size-container-max: 75rem;
  --acme-size-gutter: 1rem;
  --acme-size-header-height: 4rem;
  --acme-size-logo-height: 2rem;
  --acme-size-icon: 1.25rem;
  --acme-size-touch-target: 2.75rem;
  --acme-size-focus-ring: 3px;
  --acme-size-focus-offset: 2px;
  --acme-size-modal-max: 40rem;
  --acme-size-modal-narrow: 30rem;
  --acme-size-isi-bar-collapsed: 7.5rem;
  --acme-size-isi-bar-expanded: 70vh;
  --acme-size-sup-offset: -0.5em;
  --acme-size-sub-offset: 0.25em;
}

/* @authorkit-responsive tokens · tablet (768px – 1023px): no overrides */

/* @authorkit-responsive tokens · desktop (≥ 1024px) */
@media (min-width: 1024px) {
  :root {
    --acme-font-size-h1: 2.75rem;
    --acme-font-size-h2: 2.25rem;
    --acme-font-size-h3: 1.75rem;
    --acme-font-size-h4: 1.375rem;
    --acme-size-gutter: 2rem;
    --acme-size-header-height: 5rem;
    --acme-size-logo-height: 2.5rem;
  }
}
"
`;
